--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,28 +8,12 @@ services:
       - "5000:5000"
     environment:
       - FLASK_ENV=development
+      - FLASK_APP=app.py
     volumes:
-      - .:/app
-    depends_on:
-      - db
-    networks:
-      - flask-network
-
-  db:
-    image: postgres:13
-    container_name: flask-db
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: database_name
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - .:/app  # permite que dbtrack.db e código fiquem persistentes fora do container
     networks:
       - flask-network
 
 networks:
   flask-network:
     driver: bridge
-
-volumes:
-  postgres-data:
